# gnu_xstarcastle

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  args.C  args.h  buzzer.C  buzzer.h  castle.C  castle.h  cinematronics.C  configure.ac  difficulty.C  difficulty.h  ething.C  ething.h  fireball.C  fireball.h  font.h  global.h  icon.xbm  kapow.C  kapow.h  king.C  king.h  laser.C  laser.h  minefield.C  minefield.h  random.h  ring.C  ring.h  ship.C  ship.h  sound.C  sound.h  spikes.C  (+23 more)
sounds/: Makefile.am  README
